# hype-tools

./: README.md  pyproject.toml
HYPeTools/: cli.py
HYPeTools/HVD/: extract_HVDs.py  utils.py
HYPeTools/data/example_data/: HYP1_synthetic_example_post17_03_motifs.fasta  HYP1_synthetic_example_post17_03_motifs_metadata.csv
HYPeTools/data/example_data/HYP1_synthetic_example_post17_03_motifs.fasta_output/: HYP1_synthetic_example_post17_03_motifs.fasta_replace_parse_results.txt
HYPeTools/parser/: compacter_parse_output.py  filter_parse_output.py  replace_parser.py  report.py  utils.py
HYPeTools/synthetic/: create_synthetic_hyp_reads.py
