[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hype-tools"
version = "0.1.1"
description = "A collection of tools for analyzing HYPe reads"
authors = [{ name = "Luisa Kalkert", email = "luisa.kalkert@gmx.de" }]
readme = "README.md"
dependencies = [
    "click",
    "numpy",
    "pandas",
    "tqdm",
    "biopython",
    "python-Levenshtein",
    "minineedle",
    "scipy",
    "statistics"
]

[project.scripts]
hypetools = "HYPeTools.cli:cli"

[tool.setuptools]
packages = ["HYPeTools"]  # Ensure your package is included

[tool.setuptools.package-data]
HYPeTools = ["data/**/*"]  # ✅ Includes all files and folders inside HYPeTools/data/

[tool.setuptools.include-package-data]
include = [
    "HYPeTools/data/**/*"
]
